Refactor persistence layer and remove booking modules
Replaces the persistence selection logic in ApplicationController with direct instantiation of specific DAOFactory implementations (MemoryDAOFactory, DbmsDAOFactory, FileSystemDAOFactory). Removes all booking-related controllers, beans, DAOs, converters, and domain classes, as well as related test and view files. Also deletes JSON data files for notifications and users.